# KatSite

./: Cargo.toml  README.md  basic-navbar.sh  basic-site.sh  basic-theme.sh  conf.toml  layout.liquid  main.rs  robots.txt.liquid  sitemap.txt.liquid  sitemap.xml.liquid  style.scss
katsite-essentials/: Cargo.toml
katsite-essentials/src/: main.rs
katsite-essentials/themes/: theme-basic.css  theme-minimal.css  theme-ultraminimal.css
katsite-favicons/: Cargo.toml
katsite-favicons/src/: main.rs
katsite-scss/: Cargo.toml
katsite-scss/src/: main.rs
plugins/: basic-theme.sh  minifier.sh  navbar-simple.sh  theme-basic.sh
scss/katsite/: _base.scss  _extras.scss  _normalize.scss
scss/katsite/themes/: _basic.scss
scss/normalize/: _base.scss  _comrak.scss  _extras.scss
src/: main.rs
