[package]
name = "katsite"
license = "MIT"
version = "0.1.0"
authors = ["katattakd <katattakd@pm.me>"]
edition = '2018'
default-run = "katsite"

[dependencies]
comrak = "0.7.0"
exitcode = "1.1.2"
glob = "0.3.0"
minifier = "0.0.36"
rayon = "1.3.0"
serde = "1.0.106"
serde_derive = "1.0.106"
toml = "0.5.6"

[profile.dev]
rpath = true

[profile.release]
lto = true
panic = 'abort'

[profile.bench]
lto = true
