[package]
name = "katsite"
license = "MIT"
version = "0.1.0"
authors = ["katattakd <katattakd@pm.me>"]
description = "A minimal and flexible site generator using Markdown."
repository = "https://github.com/katattakd/KatSite"
readme = "README.md"
keywords = ["generator", "static", "site", "blog"]
categories = ["command-line-utilities", "text-processing"]
edition = '2018'
default-run = "katsite"

[workspace]
members = ["katsite-essentials"]

[dependencies]
comrak = "0.8"
exitcode = "1.1"
glob = "0.3"
pulldown-cmark = "0.7"
rayon = "1.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[profile.dev]
rpath = true

[profile.release]
lto = true
panic = 'abort'

[profile.bench]
lto = true
