[package]
name = "katsite-essentials"
license = "MIT"
version = "0.1.0"
authors = ["katattakd <katattakd@pm.me>"]
description = "Essential plugins for KatSite."
repository = "https://github.com/katattakd/KatSite"
edition = '2018'

[dependencies]
brotli = "=3.3.0"
exitcode = "=1.1.2"
glob = "=0.3.0"
htmlescape = "=0.3.1"
hyperbuild = "*"
liquid = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
toml = "*"

