[package]
name = "katsite-essentials"
license = "MIT"
version = "0.1.0"
authors = ["katattakd <katattakd@pm.me>"]
description = "Essential plugins for KatSite."
repository = "https://github.com/katattakd/KatSite"
edition = '2018'

[dependencies]
ammonia = "3.1"
brotli = "3.3"
extract-frontmatter = "1.0"
exitcode = "1.1"
glob = "0.3"
htmlescape = "0.3"
hyperbuild = "0.0"
liquid = "0.20"
rayon = "1.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

