[package]
name = "katsite-essentials"
license = "MIT"
version = "0.1.0"
authors = ["katattakd <katattakd@pm.me>"]
description = "Essential plugins for KatSite."
repository = "https://github.com/katattakd/KatSite"
edition = '2018'

[dependencies]
ammonia = "3.1"
brotli = "3.3"
extract-frontmatter = "2.0"
exitcode = "1.1"
glob = "0.3"
htmlescape = "0.3"
image = "0.23"
liquid = "0.21"
minify-html = { version = "0.3", features = ["js-esbuild"] }
oxipng = "3.0"
rayon = "1.3"
sass-rs = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
urlencoding = "1.1"
