[package]
name = "katsite-favicons"
license = "MIT"
version = "0.1.0"
authors = ["katattakd <katattakd@pm.me>"]
description = "Favicon generator plugin for KatSite."
repository = "https://github.com/katattakd/KatSite"
edition = '2018'

[dependencies]
exitcode = "1.1"
image = "0.23"
oxipng = "3.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
