[package]
name = "katsite-scss"
license = "MIT"
version = "0.1.0"
authors = ["katattakd <katattakd@pm.me>"]
description = "SCSS compiler plugin for KatSite."
repository = "https://github.com/katattakd/KatSite"
edition = '2018'

[dependencies]
exitcode = "1.1"
sass-rs = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
